--- a/package.json
+++ b/package.json
@@ -3,15 +3,19 @@
   "version": "1.0.0",
   "description": "",
   "main": "dist/main.js",
-  "dependencies": {},
   "devDependencies": {
+    "@types/papaparse": "^5.3.2",
+    "papaparse": "^5.3.2",
     "ts-loader": "^8.0.3",
     "typescript": "^4.0.2",
-    "webpack": "^4.44.1",
-    "webpack-cli": "^3.3.12"
+    "webpack": "^5.73.0",
+    "webpack-cli": "^4.10.0"
   },
   "scripts": {
     "build": "webpack",
     "watch": "webpack --watch"
+  },
+  "dependencies": {
+    "highlight.js": "^11.5.1"
   }
 }
